# TCProtocols

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Client/: TCPClient.cpp  TCPClient.h
Logger/: LEVEL.h  Logger.cpp  Logger.h
Server/: Connection.cpp  Connection.h  Listener.cpp  Listener.h  Socket.cpp  Socket.h  TCPServer.cpp  TCPServer.h
transferUtils/: TransferObjectData.cpp  TransferObjectData.h
